force-app/main/default/objects/DIR_Violation__c/DIR_Violation__c.object-meta.xml
<CustomObject>
    <description>This objects contains a Violation tied to a Case.</description>
    <label>Case Issue</label>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>Case Issue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>