force-app/main/default/objects/DIR_Violation__c/fields/Accounting_Modification__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Modification__c</fullName>
    <description>Picklist to mark accounting modification to create Accounting Data per case issue</description>
    <label>Accounting Modification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4172220</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>