force-app/main/default/objects/DIR_Violation__c/fields/After_55_days_Affirmed_Modified__c.field-meta.xml
<CustomField>
    <fullName>After_55_days_Affirmed_Modified__c</fullName>
    <description>This hidden field indicates whether the 55 days that a liability is subject to writ has passed. Used in PB Case Issue Status Changed Affirmed or Modify.</description>
    <label>After 55 days Affirmed Modified</label>
    <length>3</length>
    <type>Text</type>
</CustomField>