force-app/main/default/objects/DIR_Violation__c/fields/Amount_Due_For_Each_Case_Issue__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_For_Each_Case_Issue__c</fullName>
    <formula>Wages_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Due For Each Case Issue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>