force-app/main/default/objects/DIR_Violation__c/fields/Appeal_Deadline_Days__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Deadline_Days__c</fullName>
    <description>Appeal deadline in days from the violation type</description>
    <formula>Violation_Type__r.Appeal_Deadline_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appeal Deadline (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>