force-app/main/default/objects/DIR_Violation__c/fields/Appeal_Findings_Date__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Findings_Date__c</fullName>
    <description>Deprecate. DK 11-19-16. Same field as Appeal Finding Date.
To hold AR: appeal_find_date. AR data updated 10/28/16 to SF.</description>
    <label>Appeal Findings Date</label>
    <type>Date</type>
</CustomField>