force-app/main/default/objects/DIR_Violation__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Violations are tied together as an assessment.</description>
    <label>Assessment</label>
    <referenceTo>Assessments__c</referenceTo>
    <relationshipName>Case_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>