force-app/main/default/objects/DIR_Violation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>This creates a master detail relationship between a Violation and the Case that it is against.</description>
    <inlineHelpText>This creates a master detail relationship between a Violation and the Case that it is against.</inlineHelpText>
    <label>Case</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Case Issues</relationshipLabel>
    <relationshipName>DIR_Violations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>