force-app/main/default/objects/DIR_Violation__c/fields/Case_Issue_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Case_Issue_Help_Text__c</fullName>
    <formula>Violation_Type__r.Help_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Help text from the parent Case Issue</inlineHelpText>
    <label>Case Issue Help Text</label>
    <type>Text</type>
</CustomField>