force-app/main/default/objects/DIR_Violation__c/fields/Citation_Date_Summary__c.field-meta.xml
<CustomField>
    <fullName>Citation_Date_Summary__c</fullName>
    <description>Used strictly for reporting so that a summary can be made by date while also displaying the date on the data portion of the report</description>
    <formula>Citation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Citation Date (Summary)</label>
    <type>Date</type>
</CustomField>