force-app/main/default/objects/DIR_Violation__c/fields/Citation_Type__c.field-meta.xml
<CustomField>
    <fullName>Citation_Type__c</fullName>
    <label>Citation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Workers’ Comp</fullName>
            </value>
            <value>
                <fullName>Child Labor</fullName>
            </value>
            <value>
                <fullName>Deduction Statement</fullName>
            </value>
            <value>
                <fullName>Minimum Wage</fullName>
            </value>
            <value>
                <fullName>Split Shift Premium</fullName>
            </value>
            <value>
                <fullName>Reporting Time or Pay</fullName>
            </value>
            <value>
                <fullName>Rest Period Premium</fullName>
            </value>
            <value>
                <fullName>Meal Period Premium</fullName>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Lactation Accommodation</fullName>
            </value>
            <value>
                <fullName>Garment Records Keeping</fullName>
            </value>
            <value>
                <fullName>Garment Registration</fullName>
            </value>
            <value>
                <fullName>Unlicensed Contractor</fullName>
            </value>
            <value>
                <fullName>Car Wash Registration</fullName>
            </value>
            <value>
                <fullName>Misclassification</fullName>
            </value>
            <value>
                <fullName>Unlicensed FLC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>