force-app/main/default/objects/DIR_Violation__c/fields/Civil_Penalty_Section_Conga__c.field-meta.xml
<CustomField>
    <fullName>Civil_Penalty_Section_Conga__c</fullName>
    <formula>Violation_Type__r.Civil_Penalty_Section__c</formula>
    <label>Civil Penalty Section - Conga</label>
    <type>Text</type>
</CustomField>