force-app/main/default/objects/DIR_Violation__c/fields/Control_Cnt1__c.field-meta.xml
<CustomField>
    <fullName>Control_Cnt1__c</fullName>
    <description>Control Count for adjustment</description>
    <label>Control_Cnt1</label>
    <summaryFilterItems>
        <field>Accounting_Data__c.Type_of_event__c</field>
        <operation>notEqual</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryForeignKey>Accounting_Data__c.Case_Issue__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>