force-app/main/default/objects/DIR_Violation__c/fields/Current_Due__c.field-meta.xml
<CustomField>
    <fullName>Current_Due__c</fullName>
    <formula>If( Age__c &lt;= 15, Penalty_Balance_Due__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>