force-app/main/default/objects/DIR_Violation__c/fields/Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due__c</fullName>
    <description>Calculates the days past due assuming 30 days past the payment due date is current.</description>
    <formula>IF ( ( TODAY() - Payment_Due_Date__c ) &lt;= 30, 0, ( TODAY() - Payment_Due_Date__c ) - 30 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>