force-app/main/default/objects/DIR_Violation__c/fields/Decided_at_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Decided_at_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hearing/Meeting that the outcome of the violation was determined at</description>
    <inlineHelpText>Lookup the Meeting/Hearing that the violation was heard at. This will drive the calculation of interest where applicable.</inlineHelpText>
    <label>Decided at (Meeting):</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Hearing__c.Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Case__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Hearing__c</referenceTo>
    <relationshipName>Case_Violations</relationshipName>
    <type>Lookup</type>
</CustomField>