force-app/main/default/objects/DIR_Violation__c/fields/Dismissed_by_HO_Date__c.field-meta.xml
<CustomField>
    <fullName>Dismissed_by_HO_Date__c</fullName>
    <label>Dismissed by HO Date</label>
    <type>Date</type>
</CustomField>