force-app/main/default/objects/DIR_Violation__c/fields/Dismissed_Date__c.field-meta.xml
<CustomField>
    <fullName>Dismissed_Date__c</fullName>
    <description>This is the date that the Violation was administratively dismissed.  This will be automatically populated with today's date if it is not populated manually upon the status being set to Dismissed or Administratively Dismissed.</description>
    <inlineHelpText>This is the date that the Violation was administratively dismissed.  This will be automatically populated with today's date if it is not populated manually upon the status being set to Dismissed or Administratively Dismissed.</inlineHelpText>
    <label>Admin. Dismissal Date</label>
    <type>Date</type>
</CustomField>