force-app/main/default/objects/DIR_Violation__c/fields/DLSE_Program__c.field-meta.xml
<CustomField>
    <fullName>DLSE_Program__c</fullName>
    <formula>TEXT(Case__r.DLSE_Program__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLSE Program</label>
    <type>Text</type>
</CustomField>