force-app/main/default/objects/DIR_Violation__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <description>Fiscal Year appears on the Transmittal Report for DIR Accounting.</description>
    <formula>IF( MONTH(Citation_Date__c) &gt;= 7, TEXT(YEAR(Citation_Date__c)),TEXT(YEAR(Citation_Date__c)-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Fiscal Year appears on the Transmittal Report for DIR Accounting.</inlineHelpText>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>