force-app/main/default/objects/DIR_Violation__c/fields/Interest_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Interest_Balance_Due__c</fullName>
    <formula>Total_Interest_Amount__c  - Interest_Payments_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance due of interest</inlineHelpText>
    <label>Interest Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>