force-app/main/default/objects/DIR_Violation__c/fields/Interest_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payments_Received__c</fullName>
    <description>Total of Liability Payments under this Case Issue allocated to Interest. Populated by LiabilityPaymentTrigger -&gt; LiabilityPaymentMethods apex classes.</description>
    <inlineHelpText>Total of all funds received allocated to Interest.</inlineHelpText>
    <label>Interest Payments Rec'd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>