force-app/main/default/objects/DIR_Violation__c/fields/Interest_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Interest_Per_Day__c</fullName>
    <label>Interest Per Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>