force-app/main/default/objects/DIR_Violation__c/fields/Interim_Wages_Earned__c.field-meta.xml
<CustomField>
    <fullName>Interim_Wages_Earned__c</fullName>
    <label>Interim Wages Earned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>