force-app/main/default/objects/DIR_Violation__c/fields/Non_Interest_Wage_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Non_Interest_Wage_Balance_Due__c</fullName>
    <formula>Wages_Due__c - Wage_Payments_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EE(s) Amt Assessed - EE Payments Rec'd.</inlineHelpText>
    <label>Non-Interest Wage Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>