force-app/main/default/objects/DIR_Violation__c/fields/Old_Total_Wage_Modifications__c.field-meta.xml
<CustomField>
    <fullName>Old_Total_Wage_Modifications__c</fullName>
    <description>Total Wage Modifications Roll up summary based on Conceded Wages, Wage Modification - Penalty, and Wage Modification</description>
    <label>▼Total Wage Modifications</label>
    <summarizedField>Issue_Modifications__c.Modification_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Issue_Modifications__c.Modification_Type__c</field>
        <operation>equals</operation>
        <value>Wage Modification, Hearing Modification - Wage</value>
    </summaryFilterItems>
    <summaryForeignKey>Issue_Modifications__c.Case_Violation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>