force-app/main/default/objects/DIR_Violation__c/fields/Original_Complaint_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Complaint_Amount__c</fullName>
    <formula>Original_Wage_Assessment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Complaint Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>