force-app/main/default/objects/DIR_Violation__c/fields/Original_Penalty_Assessment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Penalty_Assessment_Amount__c</fullName>
    <inlineHelpText>The original penalty amount assessed for this violation. Will remain the same even if the penalty is modified by an appeal.</inlineHelpText>
    <label>Original Penalty Assessment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>