force-app/main/default/objects/DIR_Violation__c/fields/Penalty_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Payments_Received__c</fullName>
    <description>Total of Liability Payments under this Case Issue allocated to Penalties. Populated by LiabilityPaymentTrigger -&gt; LiabilityPaymentMethods apex classes.</description>
    <inlineHelpText>Total of all funds received allocated to Penalties.</inlineHelpText>
    <label>Civil Penalty Payments Rec'd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>