force-app/main/default/objects/DIR_Violation__c/fields/Senior_Deputy__c.field-meta.xml
<CustomField>
    <fullName>Senior_Deputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Senior Deputy on Case.  Automatically populated with the Senior Deputy on the Case Violations</description>
    <inlineHelpText>Senior Deputy on Case.  Automatically populated with the Senior Deputy on the Case Violations</inlineHelpText>
    <label>Senior Deputy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Violations_as_Senior_Deputy</relationshipName>
    <type>Lookup</type>
</CustomField>